--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -6,10 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="/css/general.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
+    <script src="/js/blob.js" defer></script>
 </head>
 
 <body>
-    <h1>Soy el home</h1>
+    <div class="welcome">
+        <h1>Soy el home</h1>
+        <a href="/logout">cerrar sesión</a>
+    </div>
 </body>
 
 </html>
