--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -9,20 +9,27 @@
     <link rel="stylesheet" href="/css/general.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/js/blob.js" defer></script>
 </head>
 
-<body style="background: black;">
-    <section class="w-full h-screen flex items-center">
-        <div class="w-4/6 md:w-2/6 mx-auto glass rounded-lg">
-            <form th:action="@{/login}" method="post" class="flex flex-col p-3 text-white">
+<body style="background: #2b6ae9;">
+    <section class="w-full h-screen flex items-center nowrap">
+        <div class="w-4/6 md:w-2/6 mx-auto glass p-5 text-white neumorphism">
+            <a href="/auth/register">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="w-7 h-7 m-4 cursor-pointer">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M19 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 11-6.75 0 3.375 3.375 0 016.75 0zM4 19.235v-.11a6.375 6.375 0 0112.75 0v.109A12.318 12.318 0 0110.374 21c-2.331 0-4.512-.645-6.374-1.766z" />
+                </svg>
+            </a>
+            <h2 class="text-center text-2xl">Login</h2>
+            <form th:action="@{/login}" method="post" id="form_login" class="flex flex-col p-3">
                 <label for="username" class="mb-2">Usuario</label>
-                <input type="text" id="username" name="username" class="rounded-xl mb-3 px-3 py-2">
+                <input type="text" id="username" name="username" class="rounded-xl mb-3 px-3 py-2 text-black">
                 <label for="password" class="mb-2">Contraseña</label>
-                <input type="password" id="password" name="password" class="rounded-xl mb-3 px-3 py-2">
+                <input type="password" id="password" name="password" class="rounded-xl mb-3 px-3 py-2 text-black">
 
                 <input type="submit" value="Iniciar Sesión"
-                    class="mx-auto w-2/4 mt-3 p-3 rounded-lg bg-gradient-to-r from-cyan-500 to-purple-500 text-white">
+                    class="mx-auto w-2/4 mt-3 p-3 rounded-lg bg-gradient-to-r from-cyan-500 to-purple-500">
             </form>
         </div>
     </section>
