--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -6,10 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <link rel="stylesheet" href="/css/general.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-    <h1>Soy el register</h1>
+<body style="background: #2b6ae9;">
+    <section class="w-full h-screen flex items-center nowrap">
+        <div class="w-4/6 md:w-2/6 mx-auto glass p-5 text-white neumorphism">
+            <a href="/auth/login">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="w-7 h-7 m-4 cursor-pointer">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6a2.25 2.25 0 00-2.25 2.25v13.5A2.25 2.25 0 007.5 21h6a2.25 2.25 0 002.25-2.25V15m3 0l3-3m0 0l-3-3m3 3H9" />
+                </svg>
+            </a>
+            <h2 class="text-center text-2xl">Register</h2>
+            <form th:action="@{/auth/register}" method="post" th:object="${usuario}" class="flex flex-col p-3">
+                <label for="username" class="mb-2">Nombre</label>
+                <input type="text" id="username" th:field="*{username}" class="rounded-xl mb-3 px-3 py-2 text-black">
+                <label for="password" class="mb-2">Password</label>
+                <input type="password" id="password" th:field="*{password}"
+                    class="rounded-xl mb-3 px-3 py-2 text-black">
+                <label for="confirmPassword" class="mb-2">Confirm Password</label>
+                <input type="password" id="confirmPassword" th:field="*{confirmPassword}"
+                    class="rounded-xl mb-3 px-3 py-2 text-black">
+
+                <input type="submit" value="Registrar"
+                    class="mx-auto w-2/4 mt-3 p-3 rounded-lg bg-gradient-to-r from-cyan-500 to-purple-500">
+            </form>
+        </div>
+    </section>
 </body>
 
 </html>
